syntax = "proto3";

package educonn.user_api;

import "user/proto/user.proto";
import "video/proto/video.proto";

service UserApi {
    rpc Create(CreateRequest) returns (CreateResponse) {};
    rpc Delete(DeleteRequest) returns (DeleteResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};

    // Videos returns all videos of the user
    rpc Videos(VideoRequest) returns (VideoResponse) {};
}

message CreateRequest {
    educonn.user.UserDetails user = 1;
}

message CreateResponse {
    educonn.user.UserDetails user = 1;
}

message DeleteRequest {
    string userId = 1;
}

message DeleteResponse {
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 2;
}

message VideoRequest {}

message VideoResponse {
    repeated educonn.video.VideoDetails videos = 1;
}
